Fixed Modal Top on mobile

--- a/src/components/less/main.less
+++ b/src/components/less/main.less
@@ -52,9 +52,11 @@ button {
     height:auto;
     }
 }
+/*Image width always 100% to fit container*/
 img{
     width:100%;
 }
+/*Modal css*/
 .modal-header .close {
    position: absolute;
    right:4px;
@@ -65,11 +67,13 @@ img{
 @media screen and (min-width: 768px) {
     .modal-dialog {
         width: 410px;
-        margin: 30px auto;
+        margin: 50px auto;
     }
 }
 
 /* On screens that are 768px or less, set the Module Wrapper width 100% */
 @media screen and (max-width: 768px) {
-    
+    .modal-dialog {
+        margin: 50px auto;
+    }
 }
